--- a/ControllerPractice/Views/Home/Samplelogin.cshtml
+++ b/ControllerPractice/Views/Home/Samplelogin.cshtml
@@ -4,4 +4,7 @@
 }
 
 <h1>Welcome @ViewBag.firstname</h1>
+Enjoy the show!
 
+
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/5iXnD2VizcAbErpkcuNQ6I?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
